--- a/.github/workflows/domcloud.yml
+++ b/.github/workflows/domcloud.yml
@@ -1,12 +1,10 @@
 name: Sync on DOM Cloud
-
-on:
+"on":
   workflow_dispatch: {}
   push:
     branches:
       - main
       - master
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -17,12 +15,4 @@ jobs:
           webhook_url: https://my.domcloud.co/api/githubdeploy
           webhook_secret: ${{ secrets.WEBHOOK_SECRET }}
           webhook_auth: ${{ secrets.WEBHOOK_AUTH }}
-          data: '{"commands":["git pull","npm install","npm run build"],"wait":1}'
-          verbose: true
-
-      - name: Check deployment status
-        uses: distributhor/workflow-webhook@v3
-        env:
-          webhook_url: https://my.domcloud.co/api/githubdeploycheck
-          webhook_secret: ${{ secrets.WEBHOOK_SECRET }}
-          webhook_auth: ${{ secrets.WEBHOOK_AUTH }}
+          data: '{"commands":["git pull","restart"]}'
